FEAT: Image upload doc
